# rwth-basketball-ticket-bot

./: .gitignore  LICENSE  README.md  dev-plan.md  pyproject.toml  ref.js
config/: settings.toml.example
data/: 1.html  2.html  3.html  debug_page.html  page1.html  page2.html  page3.html  web-analyse.md
src/: bot.py  config.py  fetcher.py  main.py  tech.md
tests/: test_verification.py
