[project]
name = "rwth-basketball-ticket-bot"
version = "0.1.0"
description = "A bot to book basketball tickets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "loguru>=0.7.0",
    "toml>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

